Changelog
*********

0.6.5 (2014-07-13)
==================
 * parse_and_normalize_streetaddress introduced

0.6.4 (2014-07-13)
==================
 * decaptcher_solve improvements & minor bugfix

0.6.3 (2014-07-13)
==================
 * missing optional argument added

0.6.2 (2014-06-26)
==================
 * wrong function name fixed
 
0.6.1 (2014-06-25)
==================
 * parse_ff_mapping issue fixed
 * parse_city_state_zip commas normalization added
 * decaptcher_solve - service URL can be customized to use gates like GSA
 * parse_fullname improved
 
0.6 (2014-02-01)
==================
 * Custom SSLv3 handler added to Client's opener
 * It's possible to pass custom handlers to Client

0.5.4 (2014-01-17)
==================
 * parse_city_state_zip improvements 
 * parse_fullname now understands lastname prefixes MC and VAN

0.5.3 (2013-12-12)
==================
 * smart_fullname_cmp improved. 
 * smart_match_fullname bugs fixed.

0.5.2 (2013-11-26)
==================
 * smart_fullname_cmp improved. It understands shortened forms of first and middle names
 * smart_match_fullname improved. It finds matches if a firstname or a middlename is missing.

0.5.1 (2013-10-09)
==================
 * debug flag was added for Client class. This allows to track HTTP requests & responses.
 * is_person improved

0.5.0 (2013-09-03)
==================
 * is_person improved
 * parse_fullname - work around mixed middlename & firstname when len(firstname)=1
 * DR, SIR, PHD, ESQ - new fullname suffixes, also it may come in the beginning
 * IClient, IClientFactory interfaces provided
 * Client class implements IClient interface and is IClientFactory factory
 * is_normal_address function added
 
0.4.1 (2013-07-25)
==================
 * is_person improved
 * is_defendant improved
 * is_plaintiff improved
 * walk_table now works around empty/None pages
 * parse_fullname, parse_fulladdress - strip trailing spaces, commas etc.
 * smart_fullname_cmp and smart_match_fullname added
 